--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.0"
   },
   "devDependencies": {
+    "live-server": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "sass": "^1.69.5"
   }
